Updates generation to add builders.